Add/update test cases for this java spring version upgrade