@@ -16,27 +16,35 @@
 
 package com.ge.predix.uaa.token.lib;
 
+import static com.ge.predix.uaa.token.lib.TestTokenUtil.TOKEN_ISSUER_ID;
+import static com.ge.predix.uaa.token.lib.TestTokenUtil.TOKEN_KEY_RESPONSE;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.when;
+import static org.testng.Assert.assertNotNull;
 
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
+import java.util.concurrent.TimeUnit;
 
-import javax.servlet.http.HttpServletRequest;
+import com.github.benmanes.caffeine.cache.Caffeine;
+import com.github.benmanes.caffeine.cache.LoadingCache;
+import jakarta.servlet.http.HttpServletRequest;
 
 import org.apache.commons.lang3.StringUtils;
-import org.mockito.Matchers;
 import org.mockito.Mockito;
+import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.oauth2.common.exceptions.InvalidRequestException;
-import org.springframework.security.oauth2.common.exceptions.InvalidTokenException;
-import org.springframework.security.oauth2.provider.OAuth2Authentication;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.oauth2.client.registration.ClientRegistration;
+import org.springframework.security.oauth2.server.resource.InvalidBearerTokenException;
+import org.springframework.security.oauth2.server.resource.authentication.BearerTokenAuthenticationToken;
+import org.springframework.test.util.ReflectionTestUtils;
 import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.RestTemplate;
 import org.testng.Assert;
@@ -52,7 +60,6 @@ public class ZacTokenServiceTest {
     private static final String ZONE = "testzone1";
     private static final String BASE_DOMAIN = "localhost";
     private static final String SERVICEID = "acs";
-    private static final String DEFAULT_TRUSTED_ISSUER = "https://issuer.com/oauth/token";
     private static final List<String> ZONE_TRUSTED_ISSUERS = Arrays.asList("http://myuaa.com",
             "http://localhost:8080/uaa/oauth/token");
     private static final String INVALID_ZONE = "invalidtestzone";
@@ -61,7 +68,7 @@ public class ZacTokenServiceTest {
         // testing when zone id is not null
         String zoneUserScope = SERVICEID + ".zones." + ZONE + ".user";
         assertAuthentication(loadAuthenticationWithZoneAsHeader(PREDIX_ZONE_HEADER_NAME, BASE_DOMAIN, ZONE, true,
-                zoneUserScope, "/test/resource", Arrays.asList("/zone/**")), ZONE);
+                                                                zoneUserScope, "/test/resource", List.of("/zone/**")), ZONE);
     }
 
     @SuppressWarnings("unchecked")
@@ -73,35 +80,35 @@ public class ZacTokenServiceTest {
         zacTokenServices.afterPropertiesSet();
     }
 
-    @Test(expectedExceptions = InvalidRequestException.class)
+    @Test(expectedExceptions = InvalidBearerTokenException.class)
     public void testLoadAuthenticationNoSubdomains() throws Exception {
         // testing when zone id is not null
         String zoneUserScope = "scope.not.used";
         loadAuthenticationWithZoneAsSubdomain(PREDIX_ZONE_HEADER_NAME, BASE_DOMAIN, ZONE, false, zoneUserScope,
-                "/test/resource", Arrays.asList("/zone/**"));
+                                              "/test/resource", List.of("/zone/**"));
     }
 
     public void testLoadAuthenticationWhenZoneIdisNull() {
         // testing when zone is null, for a non-zone specific request
         assertAuthentication(loadAuthenticationWithZoneAsHeader(PREDIX_ZONE_HEADER_NAME, BASE_DOMAIN, null, true,
-                "some-other-scope", "/zone/a", Arrays.asList("/zone/**")), null);
+                                                                "some-other-scope", "/zone/a", List.of("/zone/**")), null);
     }
 
-    @Test(expectedExceptions = InvalidTokenException.class)
+    @Test(expectedExceptions = InvalidBearerTokenException.class)
     public void testLoadAuthenticationUnauthorizedScope() {
         // testing when scope is unauthorized
         String evilZoneUserScope = SERVICEID + ".zones." + ZONE + ".evilperson";
         loadAuthenticationWithZoneAsHeader(PREDIX_ZONE_HEADER_NAME, BASE_DOMAIN, ZONE, true, evilZoneUserScope,
-                "/test/resource", Arrays.asList("/zone/**"));
+                                           "/test/resource", List.of("/zone/**"));
     }
 
     @Test(
-            expectedExceptions = InvalidTokenException.class,
+            expectedExceptions = InvalidBearerTokenException.class,
             expectedExceptionsMessageRegExp = "Unauthorized access for zone: 'invalidtestzone'.")
     public void testLoadAuthenticationWhenZoneDoesNotExist() {
         // zone does not exist
         loadAuthenticationWithZoneAsHeader(PREDIX_ZONE_HEADER_NAME, BASE_DOMAIN, INVALID_ZONE, true, "some-other-scope",
-                "/a" + INVALID_ZONE, Arrays.asList("/zone/**"));
+                "/a" + INVALID_ZONE, List.of("/zone/**"));
     }
 
     @Test(dataProvider = "zoneAuthRequestProvider")
@@ -109,9 +116,9 @@ public class ZacTokenServiceTest {
             final List<String> zoneUris, final String scope, final boolean shouldSucceed) {
 
         try {
-            OAuth2Authentication authn = loadAuthenticationWithZoneAsHeader(PREDIX_ZONE_HEADER_NAME, BASE_DOMAIN,
+            Authentication authn = loadAuthenticationWithZoneAsHeader(PREDIX_ZONE_HEADER_NAME, BASE_DOMAIN,
                     zoneId, true, scope, requestUri, zoneUris);
-            Assert.assertNotNull(authn);
+            assertNotNull(authn);
             if (!shouldSucceed) {
                 Assert.fail("Authorization did not fail, as expected.");
             }
@@ -123,32 +130,36 @@ public class ZacTokenServiceTest {
     }
 
     @Test
-    public void testFastTokenServicesCache() throws Exception {
-        ZacTokenService zacTokenService = Mockito.spy(new ZacTokenService());
-        zacTokenService.setIssuersTtlSeconds(10);
-        zacTokenService.setOauth2RestTemplate(configureMockRestTemplate());
-        zacTokenService.setServiceId(SERVICEID);
-        zacTokenService.afterPropertiesSet();
-
+    public void testFastTokenServicesCache() {
+        ZacTokenService zacTokenService = getZacTokenService(ZONE);
+        FastTokenServices fastTokenServices = mockFastTokenService();
+        when(zacTokenService.createFastTokenService(ZONE)).thenReturn(fastTokenServices);
         // Verify that FastTokenServices is created and put in the cache
         FastTokenServices fts = zacTokenService.getOrCreateZoneTokenService(ZONE);
-        Assert.assertNotNull(fts);
+        assertNotNull(fts);
         Mockito.verify(zacTokenService, times(1)).createFastTokenService(ZONE);
-
+        Mockito.clearInvocations(zacTokenService);
         // Verify that FastTokenServices is obtained from the cache
         fts = zacTokenService.getOrCreateZoneTokenService(ZONE);
-        Assert.assertNotNull(fts);
+        assertNotNull(fts);
         Mockito.verify(zacTokenService, times(1)).createFastTokenService(ZONE);
     }
 
-    @Test(expectedExceptions = HttpClientErrorException.class)
-    public void testFastTokenServicesCacheException() throws Exception {
-        ZacTokenService zacTokenService = new ZacTokenService();
+    private ZacTokenService getZacTokenService(String zoneId) {
+        ZacTokenService zacTokenService = mock(ZacTokenService.class);
+        when(zacTokenService.getOrCreateZoneTokenService(zoneId)).thenCallRealMethod();
+        when(zacTokenService.getServiceBaseDomainList()).thenReturn(List.of(BASE_DOMAIN));
+        when(zacTokenService.getServiceZoneHeadersList()).thenReturn(List.of(PREDIX_ZONE_HEADER_NAME));
+        Mockito.doCallRealMethod().when(zacTokenService).afterPropertiesSet();
         zacTokenService.setIssuersTtlSeconds(10);
-        zacTokenService.setOauth2RestTemplate(configureMockRestTemplate());
-        zacTokenService.setServiceId(SERVICEID);
         zacTokenService.afterPropertiesSet();
+        return zacTokenService;
+    }
 
+    @Test(expectedExceptions = HttpClientErrorException.class)
+    public void testFastTokenServicesCacheException() {
+        ZacTokenService zacTokenService = getZacTokenService(INVALID_ZONE);
+        when(zacTokenService.createFastTokenService(INVALID_ZONE)).thenThrow(new HttpClientErrorException(HttpStatus.NOT_FOUND));
         zacTokenService.getOrCreateZoneTokenService(INVALID_ZONE);
     }
 
@@ -156,53 +167,63 @@ public class ZacTokenServiceTest {
     private Object[][] zoneAuthRequestProvider() {
 
         return new Object[][] {
-                // non zone specific request, with a token from zone trusted issuer should fail
-                { ZONE, "/zone/a", Arrays.asList("/zone/**"), SERVICEID + ".zones." + ZONE + ".user", false },
+            // non zone specific request, with a token from zone trusted issuer should fail
+            { ZONE, "/zone/a", List.of("/zone/**"), SERVICEID + ".zones." + ZONE + ".user", false },
 
-                // Path Traversal Tests: non zone specific request with a token from zone trusted issuer should fail
-                { ZONE, "/blah/../global/a", Arrays.asList("/global/**"), SERVICEID + ".zones." + ZONE + ".user",
-                        false },
-                { ZONE, "/blah\\/../global/a", Arrays.asList("/global/**"), SERVICEID + ".zones." + ZONE + ".user",
-                        false },
-                { ZONE, "/blah/%2e%2e/global/a", Arrays.asList("/global/**"), SERVICEID + ".zones." + ZONE + ".user",
-                        false },
+            // Path Traversal Tests: non zone specific request with a token from zone trusted issuer should fail
+            {
+                ZONE, "/blah/../global/a", List.of("/global/**"), SERVICEID + ".zones." + ZONE + ".user",
+                false
+            },
+            {
+                ZONE, "/blah\\/../global/a", List.of("/global/**"), SERVICEID + ".zones." + ZONE + ".user",
+                false
+            },
+            {
+                ZONE, "/blah/%2e%2e/global/a", List.of("/global/**"), SERVICEID + ".zones." + ZONE + ".user",
+                false
+            },
 
-                // non zone specific request with a token from default trusted issuer should pass
-                { null, "/zone/a", Arrays.asList("/zone/**"), "scope.none", true },
-                { null, "/blah/../zone/a", Arrays.asList("/zone/**"), "scope.none", true },
-                { null, "/blah/%2e%2e/zone/a", Arrays.asList("/zone/**"), "scope.none", true },
+            // non zone specific request with a token from default trusted issuer should pass
+            { null, "/zone/a", List.of("/zone/**"), "scope.none", true },
+            { null, "/blah/../zone/a", List.of("/zone/**"), "scope.none", true },
+            { null, "/blah/%2e%2e/zone/a", List.of("/zone/**"), "scope.none", true },
 
-                // zone request with a token from zone trusted issuer should pass
-                { ZONE, "/a", Arrays.asList("/zone/**"), SERVICEID + ".zones." + ZONE + ".user", true },
+            // zone request with a token from zone trusted issuer should pass
+            { ZONE, "/a", List.of("/zone/**"), SERVICEID + ".zones." + ZONE + ".user", true },
 
-                // zone request with a token from zone trusted issuer but incorrect scope should fail
-                { ZONE, "/a", Arrays.asList("/zone/**"), SERVICEID + ".zones." + ZONE + ".blah", false },
+            // zone request with a token from zone trusted issuer but incorrect scope should fail
+            { ZONE, "/a", List.of("/zone/**"), SERVICEID + ".zones." + ZONE + ".blah", false },
 
-                // zone request without token from zone trusted issuer should fail
-                { null, "/a", Arrays.asList("/zone/**"), SERVICEID + ".zones." + ZONE + ".blah", false },
+            // zone request without token from zone trusted issuer should fail
+            { null, "/a", List.of("/zone/**"), SERVICEID + ".zones." + ZONE + ".blah", false },
 
-                // non-zone specific request with multiple uriPatterns, and pattern variations
-                { ZONE, "/v1/zone/a", Arrays.asList("/v1/zone/**", "/admin/**"), SERVICEID + ".zones." + ZONE + ".user",
-                        false },
-                { ZONE, "/admin/a", Arrays.asList("/zone/**", "/admin/**"), SERVICEID + ".zones." + ZONE + ".user",
-                        false },
-                { null, "/blah/../zone/a", Arrays.asList("/zone/**", "/admin/**"), "scope.none", true },
-                { null, "/blah/%2e%2e/admin/a", Arrays.asList("/zone/**", "/admin/**"), "scope.none", true },
+            // non-zone specific request with multiple uriPatterns, and pattern variations
+            {
+                ZONE, "/v1/zone/a", List.of("/v1/zone/**", "/admin/**"), SERVICEID + ".zones." + ZONE + ".user",
+                false
+            },
+            {
+                ZONE, "/admin/a", List.of("/zone/**", "/admin/**"), SERVICEID + ".zones." + ZONE + ".user",
+                false
+            },
+            { null, "/blah/../zone/a", List.of("/zone/**", "/admin/**"), "scope.none", true },
+            { null, "/blah/%2e%2e/admin/a", List.of("/zone/**", "/admin/**"), "scope.none", true },
 
-                // request with relative path that could not be normalized because of a special character;
-                // as a result, such requests are considered as a zone-specific requests
-                { ZONE, "/a/..\\zone/", Arrays.asList("/zone/**"), SERVICEID + ".zones." + ZONE + ".user", true },
-                { ZONE, "/a/..?zone/", Arrays.asList("/zone/**"), SERVICEID + ".zones." + ZONE + ".user", true },
-                { null, "/a/..\\zone/", Arrays.asList("/zone/**"), SERVICEID + "scope.none", false },
-        };
+            // request with relative path that could not be normalized because of a special character;
+            // as a result, such requests are considered as a zone-specific requests
+            { ZONE, "/a/..\\zone/", List.of("/zone/**"), SERVICEID + ".zones." + ZONE + ".user", true },
+            { ZONE, "/a/..?zone/", List.of("/zone/**"), SERVICEID + ".zones." + ZONE + ".user", true },
+            { null, "/a/..\\zone/", List.of("/zone/**"), SERVICEID + "scope.none", false },
+            };
     }
 
-    private OAuth2Authentication loadAuthenticationWithZoneAsHeader(final String configuredHeaderNames,
+    private Authentication loadAuthenticationWithZoneAsHeader(final String configuredHeaderNames,
             final String configuredBaseDomains, final String requestZoneName, final Boolean useSubdomainsForZones,
             final String userScopes, final String requestUri, final List<String> nonZoneUriPatterns) {
 
-        FastTokenServices mockFTS = mockFastTokenService(userScopes);
-        FastTokenServicesCreator mockFTSC = Mockito.mock(FastTokenServicesCreator.class);
+        FastTokenServices mockFTS = mockFastTokenService();
+        FastTokenServicesCreator mockFTSC = mock(FastTokenServicesCreator.class);
         when(mockFTSC.newInstance()).thenReturn(mockFTS);
 
         HttpServletRequest request = mockHttpRequestWithZoneAsHeader(requestZoneName, requestUri);
@@ -210,16 +231,15 @@ public class ZacTokenServiceTest {
         List<String> trustedIssuers = configureTrustedIssuers(requestZoneName);
         ZacTokenService zacTokenServices = configureZacTokenService(configuredHeaderNames, mockFTSC,
                 configuredBaseDomains, useSubdomainsForZones, trustedIssuers, nonZoneUriPatterns, request);
-
-        return executeZacTokenServices(zacTokenServices, mockFTS, trustedIssuers, userScopes);
+        return executeZacTokenServices(zacTokenServices, mockFTS, userScopes);
     }
 
-    private OAuth2Authentication loadAuthenticationWithZoneAsSubdomain(final String configuredHeaderNames,
+    private Authentication loadAuthenticationWithZoneAsSubdomain(final String configuredHeaderNames,
             final String configuredBaseDomains, final String requestZoneName, final Boolean useSubdomainsForZones,
             final String userScopes, final String requestUri, final List<String> nonZoneUriPatterns) {
 
-        FastTokenServices mockFTS = mockFastTokenService(userScopes);
-        FastTokenServicesCreator mockFTSC = Mockito.mock(FastTokenServicesCreator.class);
+        FastTokenServices mockFTS = mockFastTokenService();
+        FastTokenServicesCreator mockFTSC = mock(FastTokenServicesCreator.class);
         when(mockFTSC.newInstance()).thenReturn(mockFTS);
 
         HttpServletRequest request = mockHttpRequestWithZoneAsSubdomain(requestZoneName, requestUri);
@@ -227,28 +247,28 @@ public class ZacTokenServiceTest {
         List<String> trustedIssuers = configureTrustedIssuers(requestZoneName);
         ZacTokenService zacTokenServices = configureZacTokenService(configuredHeaderNames, mockFTSC,
                 configuredBaseDomains, useSubdomainsForZones, trustedIssuers, nonZoneUriPatterns, request);
-
-        return executeZacTokenServices(zacTokenServices, mockFTS, trustedIssuers, userScopes);
+        return executeZacTokenServices(zacTokenServices, mockFTS, userScopes);
     }
 
-    private OAuth2Authentication executeZacTokenServices(final ZacTokenService zacTokenServices, final FastTokenServices mockFTS,
-            final List<String> trustedIssuers, final String userScopes) {
+    private Authentication executeZacTokenServices(final ZacTokenService zacTokenServices, FastTokenServices mockFTS,
+                                                   String userScopes) {
         try {
             zacTokenServices.afterPropertiesSet();
+            LoadingCache<Object, Object>
+                tokenServicesCache = Caffeine.newBuilder().expireAfterWrite(86400, TimeUnit.SECONDS).build(o-> mockFTS);
+            tokenServicesCache.put("testzone1", mockFTS);
+            ReflectionTestUtils.setField(zacTokenServices, "tokenServicesCache", tokenServicesCache);
         } catch (Exception e) {
             Assert.fail("Unexpected exception after properties set on zacTokenServices " + e.getMessage());
         }
-        String accessToken = this.tokenUtil.mockAccessToken(600, userScopes);
-        OAuth2Authentication loadAuthentication = zacTokenServices.loadAuthentication(accessToken);
-
-        // Making sure we are passing the right set of issuers to the FastTokenServices
-        Mockito.verify(mockFTS).setTrustedIssuers(trustedIssuers);
-        return loadAuthentication;
+        String token =
+            this.tokenUtil.mockAccessToken(TOKEN_ISSUER_ID,60, userScopes);
+        return zacTokenServices.authenticate(new BearerTokenAuthenticationToken(token));
     }
 
     private HttpServletRequest mockHttpRequestWithZoneAsHeader(final String requestZoneName, final String requestUri) {
 
-        HttpServletRequest request = Mockito.mock(HttpServletRequest.class);
+        HttpServletRequest request = mock(HttpServletRequest.class);
         when(request.getServerName()).thenReturn("localhost");
         when(request.getHeader(PREDIX_ZONE_HEADER_NAME)).thenReturn(requestZoneName);
         when(request.getRequestURI()).thenReturn(requestUri);
@@ -258,7 +278,7 @@ public class ZacTokenServiceTest {
 
     private HttpServletRequest mockHttpRequestWithZoneAsSubdomain(final String requestZoneName, final String requestUri) {
 
-        HttpServletRequest request = Mockito.mock(HttpServletRequest.class);
+        HttpServletRequest request = mock(HttpServletRequest.class);
         when(request.getServerName()).thenReturn(requestZoneName + ".localhost");
         when(request.getRequestURI()).thenReturn(requestUri);
         return request;
@@ -269,7 +289,7 @@ public class ZacTokenServiceTest {
         List<String> trustedIssuers;
         // Non zone specific request, using default issuer
         if (StringUtils.isEmpty(requestZoneName)) {
-            trustedIssuers = Arrays.asList(DEFAULT_TRUSTED_ISSUER);
+            trustedIssuers = List.of(TOKEN_ISSUER_ID);
             // Zone specific request, using the issuers returned by mockTrustedIssuersResponseEntity
         } else {
             trustedIssuers = ZONE_TRUSTED_ISSUERS;
@@ -281,27 +301,20 @@ public class ZacTokenServiceTest {
             final String configuredBaseDomains, final Boolean useSubdomainsForZones, final List<String> trustedIssuers,
             final List<String> nonZoneUriPatterns, final HttpServletRequest request) {
 
-        ZacTokenService zacTokenServices = new ZacTokenService();
-        RestTemplate mockRestTemplate = configureMockRestTemplate();
-        DefaultZoneConfiguration zoneConfig = new DefaultZoneConfiguration();
-
+        DefaultZoneConfiguration zoneConfig = new DefaultZoneConfiguration(nonZoneUriPatterns);
         zoneConfig.setTrustedIssuerIds(trustedIssuers);
-        zoneConfig.setAllowedUriPatterns(nonZoneUriPatterns);
 
-        zacTokenServices.setDefaultZoneConfig(zoneConfig);
+        ClientRegistration mockRegistration = mock(ClientRegistration.class);
+        ZacTokenService zacTokenServices = new ZacTokenService(SERVICEID, zoneConfig, "", request, mockRegistration);
         zacTokenServices.setServiceZoneHeaders(configuredHeaderNames);
         zacTokenServices.setFastRemoteTokenServicesCreator(mockFTSC);
         zacTokenServices.setServiceBaseDomain(configuredBaseDomains);
-        zacTokenServices.setServiceId(SERVICEID);
         zacTokenServices.setUseSubdomainsForZones(useSubdomainsForZones);
-        zacTokenServices.setOauth2RestTemplate(mockRestTemplate);
-        zacTokenServices.setRequest(request);
-
         return zacTokenServices;
     }
 
     private RestTemplate configureMockRestTemplate() {
-        RestTemplate restTemplateMock = Mockito.mock(RestTemplate.class);
+        RestTemplate restTemplateMock = mock(RestTemplate.class);
 
         when(restTemplateMock.getForEntity("null/v1/registration/" + SERVICEID + "/" + ZONE, TrustedIssuers.class))
                 .thenReturn(mockTrustedIssuersResponseEntity());
@@ -312,27 +325,20 @@ public class ZacTokenServiceTest {
         return restTemplateMock;
     }
 
-    @SuppressWarnings("unchecked")
-    private FastTokenServices mockFastTokenService(final String userScopes) {
-
-        Collection<GrantedAuthority> authorities = new HashSet<>();
-        authorities.add(new SimpleGrantedAuthority(userScopes));
-
-        OAuth2Authentication oauth2Authentication = Mockito.mock(OAuth2Authentication.class);
-
-        Mockito.when(oauth2Authentication.isAuthenticated()).thenReturn(true);
-        FastTokenServices mockFTS = Mockito.mock(FastTokenServices.class);
-        Mockito.doNothing().when(mockFTS).setUseHttps(true);
-        Mockito.doNothing().when(mockFTS).setStoreClaims(true);
-        Mockito.doNothing().when(mockFTS).setTrustedIssuers(Matchers.anyList());
-        Mockito.when(oauth2Authentication.getAuthorities()).thenReturn(authorities);
-        Mockito.when(mockFTS.loadAuthentication(Matchers.anyString())).thenReturn(oauth2Authentication);
-        return mockFTS;
-
+    private FastTokenServices mockFastTokenService() {
+        BearerTokenAuthenticationToken jwtAuthenticationToken = mock(BearerTokenAuthenticationToken.class);
+        Mockito.when(jwtAuthenticationToken.isAuthenticated()).thenReturn(true);
+        FastTokenServices fastTokenServices = new FastTokenServices();
+        RestTemplate mockRestTemplate = mock(RestTemplate.class);
+        fastTokenServices.setRestTemplate(mockRestTemplate);
+        fastTokenServices.setTrustedIssuers(List.of(TOKEN_ISSUER_ID));
+        when(mockRestTemplate.exchange(anyString(), eq(HttpMethod.GET), any(), eq(String.class)))
+            .thenReturn(new ResponseEntity<>(TOKEN_KEY_RESPONSE, HttpStatus.OK));
+        return fastTokenServices;
     }
 
-    private void assertAuthentication(final OAuth2Authentication authentication, final String zoneName) {
-        Assert.assertNotNull(authentication);
+    private void assertAuthentication(final Authentication authentication, final String zoneName) {
+        assertNotNull(authentication);
 
         if (zoneName != null) {
             // When zone is defined in request, authentication must be a ZoneOAuth2Authentication
@@ -341,11 +347,12 @@ public class ZacTokenServiceTest {
     }
 
     public void testGetServiceHeaders() {
-        ZacTokenService zts = new ZacTokenService();
+        ZacTokenService zts = configureZacTokenService("", null, "", true, Collections.EMPTY_LIST,
+                                                       Collections.EMPTY_LIST, null);
         zts.setServiceZoneHeaders("a");
-        Assert.assertEquals(zts.getServiceZoneHeadersList(), Arrays.asList("a"));
+        Assert.assertEquals(zts.getServiceZoneHeadersList(), List.of("a"));
         zts.setServiceZoneHeaders("a,b");
-        Assert.assertEquals(zts.getServiceZoneHeadersList(), Arrays.asList("a", "b"));
+        Assert.assertEquals(zts.getServiceZoneHeadersList(), List.of("a", "b"));
         zts.setServiceZoneHeaders("");
         Assert.assertEquals(zts.getServiceZoneHeadersList(), Collections.emptyList());
     }
@@ -355,16 +362,9 @@ public class ZacTokenServiceTest {
         return new ResponseEntity<>(trustedIssuers, HttpStatus.OK);
     }
 
-    @Test(expectedExceptions = UnsupportedOperationException.class)
-    public void readAccessToken() {
-        ZacTokenService tokenServices = new ZacTokenService();
-        String accessToken = this.tokenUtil.mockAccessToken(600);
-        tokenServices.readAccessToken(accessToken);
-    }
-
     @Test(dataProvider = "requestUriProvider")
     public void testNormalizeUri(final String requestUri, final String expectedUri) {
-        ZoneAwareFastTokenService tokenService = new ZoneAwareFastTokenService();
+        ZoneAwareFastTokenService tokenService = new ZoneAwareFastTokenService("", null, null);
         Assert.assertEquals(tokenService.normalizeUri(requestUri), expectedUri);
     }
 
